# pr2_demos

./: CMakeLists.txt  LICENSE  package.xml
include/pr2_demos/: Macarena.h  MacarenaSynchro.h  PickTask.h  TransitionPr2.h  arms_camera.h
src/: pr2_demos.cpp
